--- a/README.org
+++ b/README.org
@@ -1,7 +1,6 @@
 #+TITLE: Link Does Mods Dotfiles
 These are all my dotfiles for each window manager I use.
-Each is configured specifically to my liking with all having
-around the same keybindings for ease of use.
+Each is configured specifically to my liking with custom themes, color schemes, and more!
 
 * Table of Contents :toc:
 - [[#dotfiles][Dotfiles?]]
