Update formatting & comments

--- a/Tokyo Night/.config/qtile/README.org
+++ b/Tokyo Night/.config/qtile/README.org
@@ -3,17 +3,16 @@ This is my Qtile config with all my modifications I added.
 Some parts you may want, and others you may not want. Just pick and choose what you want.
 This config is hevily bloated with comments so you can reference what each line does.
 Hopefully they help. If not, oh well for you.
-#+PROPERTY: header-args :tangle config.py
+
 * Table of Contents :toc:
-- [[#import-modules][Import Modules]]
+- [[#import-libraries][Import Libraries]]
 - [[#autostart][Autostart]]
+- [[#variables][Variables]]
 - [[#keybindings][Keybindings]]
-- [[#theming][Theming]]
 - [[#layouts][Layouts]]
 - [[#panel][Panel]]
-- [[#misc-dunno-what-these-do][Misc (Dunno what these do)]]
 
-* Import Modules
+* Import Libraries
 #+begin_src python
 # Generic
 import os
@@ -41,9 +40,7 @@ def autostart():
     processes = [
         ['autorandr', '--change'], # Set screen layout
         ['nitrogen', '--restore'], # Set wallpaper
-        ['picom'],                 # Start picom
-        ['blueman-applet'],        # Bluetooth service
-        ['pamac-tray']             # Pamac (check updates)
+        ['picom'],                 # Picom compositor
     ]
 
     # Run each command with a 1 second delay between each one
@@ -51,6 +48,71 @@ def autostart():
         subprocess.Popen(p)
         time.sleep(1)
 
+#+end_src
+
+* Variables
+#+begin_src python
+# Mod key
+mod = "mod4"
+
+# Terminal
+terminal = "alacritty"
+
+# Tokyo night (storm) color scheme
+colors = [["#24283b", "#24283b"], # Background
+          ["#a9b1d6", "#a9b1d6"], # Foreground
+          ["#32344a", "#32344a"], # Black
+          ["#f7768e", "#f7768e"], # Red
+          ["#9ece6a", "#9ece6a"], # Green
+          ["#e0af68", "#e0af68"], # Yellow
+          ["#7aa2f7", "#7aa2f7"], # Blue
+          ["#ad8ee6", "#ad8ee6"], # Magenta
+          ["#449dab", "#449dab"], # Cyan
+          ["#787c99", "#787c99"]] # White
+
+
+# Layout theme
+def init_layout_theme():
+    return {"margin":10,
+            "border_width":4,
+            "border_focus": "#7aa2f7",
+            "border_normal": "#485e8c"
+            }
+layout_theme = init_layout_theme()
+
+# Widget settings
+widget_defaults = dict(
+    font='sans',
+    fontsize=12,
+    padding=3
+)
+extension_defaults = widget_defaults.copy()
+
+dgroups_key_binder = None
+dgroups_app_rules = []  # type: List
+main = None  # WARNING: this is deprecated and will be removed soon
+follow_mouse_focus = True
+bring_front_click = False
+cursor_warp = False
+floating_layout = layout.Floating(float_rules=[
+    # Run the utility of `xprop` to see the wm class and name of an X client.
+    {'wmclass': 'confirm'},
+    {'wmclass': 'dialog'},
+    {'wmclass': 'download'},
+    {'wmclass': 'error'},
+    {'wmclass': 'file_progress'},
+    {'wmclass': 'notification'},
+    {'wmclass': 'splash'},
+    {'wmclass': 'toolbar'},
+    {'wmclass': 'confirmreset'}, # gitk
+    {'wmclass': 'makebranch'},   # gitk
+    {'wmclass': 'maketag'},      # gitk
+    {'wname': 'branchdialog'},   # gitk
+    {'wname': 'pinentry'},       # GPG key password entry
+    {'wmclass': 'ssh-askpass'},  # ssh-askpass
+])
+auto_fullscreen = True
+focus_on_window_activation = "smart"
 #+end_src
 
 * Keybindings
@@ -150,38 +212,6 @@ mouse = [
 ]
 #+end_src
 
-* Theming
-#+begin_src python
-# Layouts
-def init_layout_theme():
-    return {"margin":10,
-            "border_width":4,
-            "border_focus": "#7aa2f7",
-            "border_normal": "#485e8c"
-            }
-layout_theme = init_layout_theme()
-
-# Panel
-colors = [["#24283b", "#24283b"], # Background
-          ["#a9b1d6", "#a9b1d6"], # Foreground
-          ["#32344a", "#32344a"], # Black
-          ["#f7768e", "#f7768e"], # Red
-          ["#9ece6a", "#9ece6a"], # Green
-          ["#e0af68", "#e0af68"], # Yellow
-          ["#7aa2f7", "#7aa2f7"], # Blue
-          ["#ad8ee6", "#ad8ee6"], # Magenta
-          ["#449dab", "#449dab"], # Cyan
-          ["#787c99", "#787c99"]] # White
-
-# Panel widgets
-widget_defaults = dict(
-    font='sans',
-    fontsize=12,
-    padding=3,
-)
-extension_defaults = widget_defaults.copy()
-#+end_src
-
 * Layouts
 #+begin_src python
 layouts = [
@@ -199,6 +229,7 @@ layouts = [
     layout.Max()                                # Almost fullscreen (no borders)
 ]
 #+end_src
+
 * Panel
 #+begin_src python
 screens = [
@@ -206,20 +237,55 @@ screens = [
     Screen(
         top=bar.Bar(
             [
-                widget.CurrentLayout(foreground=colors[3]),
+                widget.CurrentLayout(
+                         foreground=colors[3]
+                         ),
                 widget.GroupBox(),
-                widget.WindowName(foreground=colors[4]),
-                widget.CPU(format=' {load_percent}%', foreground=colors[5]),
-                widget.Sep(padding=20),
-                widget.Memory(format=' {MemUsed}M', foreground=colors[5]),
-                widget.Sep(padding=20),
-                widget.Wlan(interface='wlp2s0', format=' {essid}', foreground=colors[6]),
-                widget.Sep(padding=20),
-                widget.PulseVolume(foreground=colors[7]),
-                widget.Sep(padding=20),
+                widget.WindowName(
+                         foreground=colors[4]
+                         ),
+                widget.CPU(
+                         format=' {load_percent}%',
+                         foreground=colors[5]
+                         ),
+                widget.Sep(
+                         padding=20
+                         ),
+                widget.Memory(
+                         format=' {MemUsed}M',
+                         foreground=colors[5]
+                         ),
+                widget.Sep(
+                         padding=20
+                         ),
+                widget.Wlan(
+                         interface='wlp2s0',
+                         format=' {essid}',
+                         foreground=colors[6]
+                         ),
+                widget.Sep(
+                         padding=20
+                         ),
+                widget.PulseVolume(
+                         foreground=colors[7]
+                         ),
+                widget.Sep(
+                         padding=20
+                         ),
+                 widget.Pacman(
+                         fmt='Updates: {}',
+                         update_interval=1,
+                         ),
+                widget.Sep(
+                         padding=20
+                         ),
                 widget.Systray(),
-                widget.Sep(padding=20),
-                widget.Clock(format='  %b %d %Y - %H:%M %p', foreground=colors[8]),
+                widget.Sep(
+                         padding=20),
+                widget.Clock(
+                         format='  %a %m %Y - %I:%M %p',
+                         foreground=colors[8]
+                         ),
             ],
             24,
         ),
@@ -228,58 +294,28 @@ screens = [
     Screen(
         top=bar.Bar(
             [
-                widget.CurrentLayout(foreground=colors[3]),
+                widget.CurrentLayout(
+                         foreground=colors[3]
+                         ),
                 widget.GroupBox(),
-                widget.Prompt(),
-                widget.WindowName(foreground=colors[4]),
-                widget.Net(inteerface='wlp2s0', format=' {down}   {up}', foreground=colors[7]),
-                widget.Sep(padding=20),
-                widget.Clock(format='  %b %d %Y - %H:%M %p', foreground=colors[8]),
+                widget.WindowName(
+                         foreground=colors[4]
+                         ),
+                widget.Net(
+                         inteerface='wlp2s0',
+                         format=' {down}   {up}',
+                         foreground=colors[7]
+                         ),
+                widget.Sep(
+                         padding=20
+                         ),
+                widget.Clock(
+                         format='  %a %m %Y - %I:%M %p',
+                         foreground=colors[8]
+                         ),
             ],
             24,
         ),
     ),
 ]
-#+end_src
-
-* Misc (Dunno what these do)
-#+begin_src python
-dgroups_key_binder = None
-dgroups_app_rules = []  # type: List
-main = None  # WARNING: this is deprecated and will be removed soon
-follow_mouse_focus = True
-bring_front_click = False
-cursor_warp = False
-floating_layout = layout.Floating(float_rules=[
-    # Run the utility of `xprop` to see the wm class and name of an X client.
-    {'wmclass': 'confirm'},
-    {'wmclass': 'dialog'},
-    {'wmclass': 'download'},
-    {'wmclass': 'error'},
-    {'wmclass': 'file_progress'},
-    {'wmclass': 'notification'},
-    {'wmclass': 'splash'},
-    {'wmclass': 'toolbar'},
-    {'wmclass': 'confirmreset'}, # gitk
-    {'wmclass': 'makebranch'},   # gitk
-    {'wmclass': 'maketag'},      # gitk
-    {'wname': 'branchdialog'},   # gitk
-    {'wname': 'pinentry'},       # GPG key password entry
-    {'wmclass': 'ssh-askpass'},  # ssh-askpass
-])
-auto_fullscreen = True
-focus_on_window_activation = "smart"
-#+end_src
-
-XXX: Gasp! We're lying here. In fact, nobody really uses or cares about this
-string besides java UI toolkits; you can see several discussions on the
-mailing lists, GitHub issues, and other WM documentation that suggest setting
-this string if your java app doesn't work correctly. We may as well just lie
-and say that we're a working one by default.
-
-We choose LG3D to maximize irony: it is a 3D non-reparenting WM written in
-java that happens to be on java's whitelist.
-
-#+begin_src
-wmname = "LG3D"
 #+end_src
