--- a/Ahsoka/README.org
+++ b/Ahsoka/README.org
@@ -27,5 +27,5 @@ You're probably wondering who Ahsoka is, if you've never seen Star Wars. Well...
 
 
 #+CAPTION: Footer Decoration
-#+ATTR_HTML: :alt Footer Decoration :title Footer Decoration
+#+ATTR_HTML: :alt Footer Decoration :title Footer Decoration :style margin-left: auto; margin-right: auto;
 [[https://github.com/link-does-mods/dotfiles/blob/main/Footer%20Decoration.png?raw=true]]
