--- a/Ahsoka/.config/openbox/README.org
+++ b/Ahsoka/.config/openbox/README.org
@@ -757,3 +757,7 @@ This is my openbox config. It is a cross between a floating window manager and a
   </applications>
 </openbox_config>
 #+end_src
+
+#+CAPTION: Footer Decoration
+#+ATTR_HTML: :alt Footer Decoration :title Footer Decoration
+[[https://github.com/link-does-mods/dotfiles/blob/main/Footer%20Decoration.png?raw=true]]
