--- a/Ahsoka/.xmonad/lib/Custom/README.org
+++ b/Ahsoka/.xmonad/lib/Custom/README.org
@@ -278,3 +278,8 @@ myTreeNavigation = M.fromList
     , ((0, xK_i),      TS.moveHistForward)
     ]
 #+end_src
+
+
+#+CAPTION: Footer Decoration
+#+ATTR_HTML: :alt Footer Decoration :title Footer Decoration :style margin-left: auto; margin-right: auto;
+[[https://github.com/link-does-mods/dotfiles/blob/main/Footer%20Decoration.png?raw=true]]
