--- a/Tokyo Night/.xmonad/README.org
+++ b/Tokyo Night/.xmonad/README.org
@@ -12,9 +12,7 @@ in for them. You'll for sure want parts of my config, so go on ahead! Take what 
 
 * Other Parts
 To make things less bloated, I split up the config into multiple config files. To find my
-keybindings as well as my tree menu configuration, go to these sections:
-- [[https://github.com/link-does-mods/dotfiles/blob/main/.xmonad/lib/Custom/Keys.hs][Keybindings]]
-- [[https://github.com/link-does-mods/dotfiles/blob/main/.xmonad/lib/Custom/TreeMenu.hs][Tree Menu]]
+keybindings as well as my tree menu configuration, go to this section: [[https://github.com/link-does-mods/dotfiles/tree/main/Ahsoka/.xmonad/lib/Custom][Key bindings and tree menu]]
 
 * Import Libraries
 #+begin_src haskell
